Add quickstart in the README.md; Change mysql port open to host; Change mysql default passwd to 123456

--- a/examples/p2p-tutorial/docker-compose.yml.template
+++ b/examples/p2p-tutorial/docker-compose.yml.template
@@ -68,8 +68,8 @@ services:
         - -h
         - mysql
       timeout: 20s
-    expose:
-      - "3306"
+    ports:
+      - "3306:3306"
     restart: always
     volumes:
       - ./mysql/initdb:/docker-entrypoint-initdb.d
